--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,8 @@
 {
-  "builds": [{ "src": "index.html", "use": "@vercel/static-build" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/" }
+  ]
 }
